changes to crafting system